protocols/tests/adders/adder_d1/double_fork_error.out
error: Thread 0 (transaction 'add_double_fork') attempted to fork more than once
   ┌─ adders/adder_d1/double_fork_error.prot:12:3
   │
12 │   fork();
   │   ^^^^^^^ first fork() called here
   ·
15 │   fork();
   │   ^^^^^^^ second fork() called here

error: Thread 1 (transaction 'add_double_fork') attempted to fork more than once
   ┌─ adders/adder_d1/double_fork_error.prot:12:3
   │
12 │   fork();
   │   ^^^^^^^ first fork() called here
   ·
15 │   fork();
   │   ^^^^^^^ second fork() called here

Trace 0 failed: Thread(DoubleFork { thread_idx: 0, transaction_name: "add_double_fork", first_fork_stmt_id: stmt4, second_fork_stmt_id: stmt7 })
Trace 0 failed: Thread(DoubleFork { thread_idx: 1, transaction_name: "add_double_fork", first_fork_stmt_id: stmt4, second_fork_stmt_id: stmt7 })
Trace 0 execution failed.
